Try to fix the green button alignment.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -144,9 +144,9 @@ span.cta-text {
   font-weight: bold;
   height: 16px;
   display: block;
-  padding-top: 12px;
+  padding-top: 11px;
   padding-right: 20px;
-  padding-bottom: 12px;
+  padding-bottom: 13px;
   padding-left: 20px;
   border-radius: 40px;
   background-color: #3FBD7C;
